Moved to the Streams.toList() api over Collectors.toList()